--- a/ApplicationCollector.WebApi/ApplicationCollector.WebApi.csproj
+++ b/ApplicationCollector.WebApi/ApplicationCollector.WebApi.csproj
@@ -8,7 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Design" Version="1.1.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationCollector.Application\ApplicationCollector.Application.csproj" />
+    <ProjectReference Include="..\ApplicationCollector.Infrastructure.Core\ApplicationCollector.Infrastructure.Core.csproj" />
   </ItemGroup>
 
 </Project>
